--- a/Grocery_List_App/css/main.css
+++ b/Grocery_List_App/css/main.css
@@ -22,6 +22,7 @@ main{
 
 /************ Header ************/
 
+
 h1{
     font-size: 3em;
     color: #ffffff;
@@ -38,7 +39,9 @@ section{
     clear: both;
 
 }
+
 /************ Input Field ************/
+
 input{
     width: 30%;
     height: 35px;
@@ -59,11 +62,13 @@ input{
     font-family: 'Poiret One', cursive;
 }
 
+
 /************ Save Button ************/
+
 
 #submit{
     background-color: #353a3d;
-    color: #aaf3ff;
+    color: #9FDA58;
     border-radius: 5px;
     width: 10%;
     height: 35px;
@@ -86,7 +91,9 @@ input{
     color: #000000;
 }
 
+
 /************ Table Header ************/
+
 
 h4 {
     position: relative;
@@ -100,10 +107,19 @@ h4 {
 
 }
 
+p{
+    color: #9FDA58;
+    text-align: center;
+    text-transform:uppercase ;
+    letter-spacing: 3px;
+}
+
 
 /************ Table ************/
 
+
 table{
+    color: #9FDA58;
     text-align: center;
     width: 500px;
     background-color: #353a3d;
@@ -116,19 +132,20 @@ table{
 }
 
 td{
-    background-color: #cdf1ff;
     padding: 5px;
     border-radius: 5px;
     box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.3);
 }
+
+/************ Buttons ************/
 
 button{
     background-color: #850e00;
     color: #ffffff;
     border-radius: 5px;
     box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.3);
-    margin: 5px;
-    width: 100px;
+
+
 }
 
 button:hover{
@@ -148,19 +165,13 @@ button:focus{
     color: #000000;
 }
 
-
-#bottom{
-    background-color: rgba(140, 140, 140, 0.8);
-    border: solid 1px #a3a3a3;
-    border-radius: 5px;
-    padding: 20px;
-}
+/************ Footer ************/
 
 footer{
     text-align: center;
 }
 
-form{
-    color: #ffffff;
+small{
+    color: #fffcff;
 }
 
