--- a/Grocery_List_App/css/main.css
+++ b/Grocery_List_App/css/main.css
@@ -39,6 +39,13 @@ section{
     clear: both;
 
 }
+.checkbox{
+
+    margin: 0 150px;
+
+
+}
+
 
 /************ Input Field ************/
 
@@ -175,3 +182,6 @@ small{
     color: #fffcff;
 }
 
+form{
+    color: #9FDA58;
+}
